Keep calm and commit

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts"
+    "test": "npx eslint index.ts --fix",
+    "lint": "eslint . --ext .ts",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
