--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/node": "^17.0.8",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4"
